@@ -1,7 +1,6 @@
 # This file is generated by Dist::Zilla::Plugin::CPANFile v6.030
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
-requires "Cache::FastMmap" => "1.40";
 requires "Class::Null" => "2.110730";
 requires "File::Path" => "2.09";
 requires "File::ReadBackwards" => "1.05";
@@ -10,6 +9,7 @@ requires "JSON::MaybeXS" => "1.003";
 requires "Module::Pluggable" => "5.1";
 requires "Module::Runtime" => "0.014";
 requires "Moo" => "2.001001";
+requires "Redis" => "2.000";
 requires "Ref::Util" => "0.203";
 requires "Sub::Install" => "0.928";
 requires "Subclass::Of" => "0.003";
