@@ -5,7 +5,6 @@ perl              = 5.010001
 boolean           = 0.45
 namespace::autoclean = 0.26
 namespace::clean  = 0.25
-Cache::FastMmap   = 1.40
 Class::Null       = 2.110730
 File::Path        = 2.09
 File::ReadBackwards = 1.05
@@ -14,6 +13,7 @@ JSON::MaybeXS     = 1.003
 Module::Pluggable = 5.1
 Module::Runtime   = 0.014
 Moo               = 2.001001
+Redis             = 2.000
 Ref::Util         = 0.203
 Sub::Install      = 0.928
 Subclass::Of      = 0.003
